# OPCUA-server

opcua_server/Server/: CMakeLists.txt  Makefile  TestServer.Config.xml
opcua_server/Server/include/: AlarmsAndConditionsStressTestModule.h  ApplicationModule.h  ChangeAddressSpaceMethod.h  ChangeTwoStateItemSemanticsMethod.h  CommandLineOptions.h  CustomCallbackEvent.h  CustomVariable.h  DiagnosticMessages.h  DynamicNodeCache.h  DynamicTestVariable.h  EndpointManipulationMethods.h  EventSourceObject.h  EventingModule.h  HistoricalEvent.h  HistorizingExclusiveLimitAlarm.h  HistorizingVariable.h  MeasureConditionBranchPerformanceMethod.h  ModelerEnableDisable.h  ModelerModule.h  ModuleFolder.h  MonitoredItemsAsyncManipulation.h  MyExclusiveLimitAlarm.h  MyLimitAlarm.h  MyNonExclusiveLimitAlarm.h  MyRefrigeratorStateVariable.h  MyTrace.h  Nodeset2ExportImport.h  OffTheShelfAlarmsModule.h  OperationLimitMethods.h  PrintApi.h  PubSubModule.h  RedModule.h  ServerDummyValueGenerator.h  ShutdownMethod.h  SimVarManager.h  SimVarMethods.h  SimulationVariable.h  StopWatch.h  StructoAutomoldApplication.h  StructoPrinter.h  (+43 more)
opcua_server/Server/src/: AlarmsAndConditionsStressTestModule.cpp  ApplicationModule.cpp  ChangeTwoStateItemSemanticsMethod.cpp  CommandLineOptions.cpp  CustomCallbackEvent.cpp  CustomVariable.cpp  DiagnosticMessages.cpp  DynamicNodeCache.cpp  DynamicTestVariable.cpp  EndpointManipulationMethods.cpp  EventSourceObject.cpp  EventingModule.cpp  HistoricalEvent.cpp  HistorizingExclusiveLimitAlarm.cpp  HistorizingVariable.cpp  MeasureConditionBranchPerformanceMethod.cpp  ModelerEnableDisable.cpp  ModelerModule.cpp  ModuleFolder.cpp  MonitoredItemsAsyncManipulation.cpp  MyExclusiveLimitAlarm.cpp  MyLimitAlarm.cpp  MyNonExclusiveLimitAlarm.cpp  MyRefrigeratorStateVariable.cpp  MyTrace.cpp  Nodeset2ExportImport.cpp  OffTheShelfAlarmsModule.cpp  OperationLimitMethods.cpp  PrintApi.cpp  PubSubModule.cpp  RedModule.cpp  ServerDummyValueGenerator.cpp  ShutdownMethod.cpp  SimVarManager.cpp  SimulationVariable.cpp  StopWatch.cpp  StructoAutomoldApplication.cpp  StructoAutomoldServer.cpp  StructoPrinter.cpp  StructuredDataTypeModule.cpp  (+44 more)
(+1423 files in other folders)
